Fixed .button spacing

--- a/contact-button-assignment/style.css
+++ b/contact-button-assignment/style.css
@@ -40,4 +40,6 @@ h2 {
       letter-spacing: 1px
 }
 
-.button {border-radius: 8px;}
+.button {
+      border-radius: 8px;
+}
